--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,12 @@ nav {
 }
 
 main {
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
+    width: 100%;
     background-image: url(./asset/background_photo_desktop.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+    background-attachment: fixed;
+}   
