move fetch in app component and format all component files except nav

--- a/src/styles/Track.css
+++ b/src/styles/Track.css
@@ -24,4 +24,9 @@
     color: white;
     background-color: transparent;
     border: none;
+    cursor: pointer;
+}
+
+.track-plus:active {
+    color: #cccccc;
 }
