--- a/src/styles/PlayList.css
+++ b/src/styles/PlayList.css
@@ -1,41 +1,64 @@
 .playlist {
-    color: white;
-    background-color: rgba(0, 12, 64, 0.8);
-    padding: 5rem;
-    width: 35rem;
-    border: 2px solid black;
+  color: white;
+  background-color: rgba(0, 12, 64, 0.8);
+  padding: 5rem;
+  width: 35rem;
+  border: 2px solid black;
 }
 
-.playlist-name[type=text] {
-    font-size: 2.8rem;
-    font-weight: 500;
-    padding-bottom: 1rem;
-    margin-bottom: 1rem;
-    border: none;
-    width: 100%;
-    color:white;
-    background-color: transparent;
-    border-bottom: 2px solid white;
+.playlist-name[type="text"] {
+  font-size: 2.8rem;
+  font-weight: 500;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  border: none;
+  width: 100%;
+  color: white;
+  background-color: transparent;
+  border-bottom: 2px solid white;
 }
 
-.playlist-name[type=text]:focus {
-    border: none;
-    outline: none;
-    border-bottom: 2px solid white;
+.playlist-name[type="text"]:focus {
+  border: none;
+  outline: none;
+  border-bottom: 2px solid white;
 }
 
 .savebtn {
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    margin-top: 2.5rem;
-    width: 100%;
-    height: 4rem;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    background-color: #4b17e8;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  margin-top: 2.5rem;
+  width: 100%;
+  height: 4rem;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  background-color: #4b17e8;
 }
 
-.savebtn:hover{
-    background-color: #5d2eea;
+.savebtn:hover {
+  background-color: #5d2eea;
+}
+
+@media screen and (max-width: 768px) {
+  .playlist {
+    padding: 4rem;
+  }
+  .playlist-name[type="text"] {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 426px) {
+  .playlist {
+    padding: 3rem;
+    width: 30rem;
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .playlist {
+    padding: 2rem;
+    width: 28rem;
+  }
 }
