--- a/src/styles/SearchResult.css
+++ b/src/styles/SearchResult.css
@@ -1,13 +1,34 @@
 .search-result {
-    color: white;
-    background-color: rgba(0, 12, 64, 0.8);
-    padding: 2rem 3rem 3rem;
-    width: 45rem;
-    border: 2px solid black;
+  color: white;
+  background-color: rgba(0, 12, 64, 0.8);
+  padding: 2rem 3rem 3rem;
+  width: 45rem;
+  border: 2px solid black;
 }
 
 .search-result h1 {
-    font-size: 2.3rem;
-    font-weight: 500;
-    padding-bottom: 1rem;
+  font-size: 2.3rem;
+  font-weight: 500;
+  padding-bottom: 1rem;
+}
+
+@media screen and (max-width: 768px) {
+  .search-result {
+    padding: 3rem 4rem;
+    width: 35rem;
+  }
+}
+
+@media screen and (max-width: 426px) {
+  .search-result {
+    padding: 2rem 3rem;
+    width: 30rem;
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .search-result {
+    padding: 2rem 2rem;
+    width: 28rem;
+  }
 }
